--- a/app/src/main/res/layout/sign_up_page.xml
+++ b/app/src/main/res/layout/sign_up_page.xml
@@ -45,6 +45,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/firstNameTextEdit" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/submitButton"
+        android:layout_width="match_parent"
+        android:layout_height="105dp"
+        android:layout_margin="16dp"
+        android:text="submit"
+        android:textSize="32sp"
+        android:textAllCaps="false"
+        android:backgroundTint="@android:color/holo_green_dark"
+        app:iconGravity="textStart"
+        app:iconPadding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/lastNameTextEdit"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
