--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:layout_margin="16dp"
         android:layout_marginBottom="24dip"
         android:gravity="center"
-        android:text="Welcome to Dash Door, Hope you are Hungry!"
+        android:text="@string/welcome_to_dash_door_hope_you_are_hungry"
         android:textSize="42sp"
         android:textColor="#39FF14"
         app:layout_constraintEnd_toEndOf="parent"
