--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         android:layout_width="274dp"
         android:layout_height="42dp"
         android:layout_marginStart="8dp"
-        android:hint="Enter a location"
+        android:hint="@string/enter_a_location"
         android:inputType="textAutoComplete"
         android:padding="8dp"
         android:textColor="#39FF14"
@@ -53,7 +53,7 @@
         android:layout_height="36dp"
         android:layout_marginStart="16dip"
         android:layout_marginTop="8dp"
-        android:text="Food Type"
+        android:text="@string/food_type"
         android:textColor="#39FF14"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
         android:layout_width="273dp"
         android:layout_height="39dp"
         android:layout_marginStart="8dp"
-        android:hint="Enter a type of food"
+        android:hint="@string/enter_a_type_of_food"
         android:inputType="textAutoComplete"
         android:padding="8dp"
         android:textColor="#39FF14"
