--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="200dp"
         android:layout_marginTop="16dip"
         android:padding="8dp"
-        android:text="What Sounds Good Today?"
+        android:text="@string/what_sounds_good_today"
         android:textColor="#39FF14"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
         android:layout_height="39dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="Location"
+        android:text="@string/location"
         android:textColor="#39FF14"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +101,7 @@
         android:layout_width="390dp"
         android:layout_height="125dp"
         android:layout_marginTop="16dp"
-        android:text="Search"
+        android:text="@string/search"
         android:textSize="36sp"
         android:textColor="#39FF14"
         android:background="#222222"
@@ -114,7 +114,7 @@
         android:layout_width="390dp"
         android:layout_height="125dp"
         android:layout_marginTop="8dp"
-        android:text="Admin Action"
+        android:text="@string/admin_action"
         android:textSize="36sp"
         android:textColor="#39FF14"
         android:background="#222222"
