--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/exerciseLabelTextView"
+        android:id="@+id/LocationLabelTextView"
         android:layout_width="100dp"
         android:layout_height="39dp"
         android:layout_marginStart="16dp"
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/logDisplayTextView" />
 
     <EditText
-        android:id="@+id/exerciseInputEditText"
+        android:id="@+id/LocationInputEditText"
         android:layout_width="274dp"
         android:layout_height="42dp"
         android:layout_marginStart="8dp"
@@ -44,37 +44,37 @@
         android:textColor="#39FF14"
         android:textColorHint="#66FF66"
         android:background="#6600FF00"
-        app:layout_constraintBaseline_toBaselineOf="@+id/exerciseLabelTextView"
-        app:layout_constraintStart_toEndOf="@+id/exerciseLabelTextView" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/LocationLabelTextView"
+        app:layout_constraintStart_toEndOf="@+id/LocationLabelTextView" />
 
     <TextView
-        android:id="@+id/weightLabelTextView"
+        android:id="@+id/FoodTypeLabelTextView"
         android:layout_width="100dp"
         android:layout_height="36dp"
         android:layout_marginStart="16dip"
         android:layout_marginTop="8dp"
-        android:text="@string/food_type"
+        android:text="Food Type"
         android:textColor="#39FF14"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exerciseLabelTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/LocationLabelTextView" />
 
     <EditText
-        android:id="@+id/weightInputEditText"
+        android:id="@+id/FoodTypeInputEditText"
         android:layout_width="273dp"
         android:layout_height="39dp"
         android:layout_marginStart="8dp"
-        android:hint="@string/enter_a_type_of_food"
+        android:hint="Enter a type of food"
         android:inputType="textAutoComplete"
         android:padding="8dp"
         android:textColor="#39FF14"
         android:textColorHint="#66FF66"
         android:background="#6600FF00"
-        app:layout_constraintBaseline_toBaselineOf="@+id/weightLabelTextView"
-        app:layout_constraintStart_toEndOf="@+id/weightLabelTextView" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/FoodTypeLabelTextView"
+        app:layout_constraintStart_toEndOf="@+id/FoodTypeLabelTextView" />
 
     <TextView
-        android:id="@+id/repLabelTextView"
+        android:id="@+id/costLabelTextView"
         android:layout_width="100dp"
         android:layout_height="36dp"
         android:layout_marginStart="16dip"
@@ -83,18 +83,18 @@
         android:textColor="#39FF14"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/weightLabelTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/FoodTypeLabelTextView" />
 
     <EditText
-        android:id="@+id/repInputEditText"
+        android:id="@+id/costInputEditText"
         android:layout_width="273dp"
         android:layout_height="39dp"
         android:layout_marginStart="8dp"
         android:inputType="number"
         android:padding="8dp"
         android:textColor="#39FF14"
-        app:layout_constraintBaseline_toBaselineOf="@+id/repLabelTextView"
-        app:layout_constraintStart_toEndOf="@+id/repLabelTextView" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/costLabelTextView"
+        app:layout_constraintStart_toEndOf="@+id/costLabelTextView" />
 
     <Button
         android:id="@+id/logButton"
@@ -107,7 +107,7 @@
         android:background="#222222"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/repInputEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/costInputEditText" />
 
     <Button
         android:id="@+id/adminOnlyButton"
