--- a/app/src/main/res/layout/sign_up_page.xml
+++ b/app/src/main/res/layout/sign_up_page.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    android:background="#000000">
 
 
     <TextView
@@ -13,6 +15,7 @@
         android:layout_marginBottom="24dp"
         android:gravity="center"
         android:text="Sign up:"
+        android:textColor="#39FF14"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,51 +25,59 @@
         android:id="@+id/nameTextEdit"
         android:layout_width="match_parent"
         android:layout_height="75dp"
+        android:layout_margin="16dp"
         android:autofillHints="Please enter your name:"
         android:gravity="center"
         android:hint="name: "
+
         android:inputType="text"
+        android:textColorHint="#66FF66"
         android:textSize="24sp"
-        android:layout_margin="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signUpTextView" />
+
     <EditText
         android:id="@+id/usernameTextEdit"
         android:layout_width="match_parent"
         android:layout_height="75dp"
+        android:layout_margin="16dp"
         android:autofillHints="Type your username"
         android:gravity="center"
         android:hint="username: "
-        android:textSize="24sp"
         android:inputType=""
-        android:layout_margin="16dp"
+        android:textColorHint="#66FF66"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameTextEdit" />
+
     <EditText
         android:id="@+id/passwordTextEdit"
         android:layout_width="match_parent"
         android:layout_height="85dp"
+        android:layout_margin="16dp"
         android:autofillHints="Enter your Email"
         android:gravity="center"
         android:hint="password"
         android:inputType="text"
+        android:textColorHint="#66FF66"
         android:textSize="24sp"
-        android:layout_margin="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/usernameTextEdit" />
+
     <EditText
         android:id="@+id/emailTextEdit"
         android:layout_width="match_parent"
         android:layout_height="85dp"
+        android:layout_margin="16dp"
         android:autofillHints="Enter your Email"
         android:gravity="center"
         android:hint="Email"
         android:inputType="text"
+        android:textColorHint="#66FF66"
         android:textSize="24sp"
-        android:layout_margin="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordTextEdit" />
@@ -76,15 +87,15 @@
         android:layout_width="match_parent"
         android:layout_height="105dp"
         android:layout_margin="16dp"
-        android:text="submit"
-        android:textSize="32sp"
-        android:textAllCaps="false"
         android:backgroundTint="@android:color/holo_green_dark"
+        android:text="submit"
+        android:textAllCaps="false"
+        android:textSize="32sp"
         app:iconGravity="textStart"
         app:iconPadding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/emailTextEdit"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/emailTextEdit" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
