--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -37,18 +37,33 @@
         app:layout_constraintTop_toBottomOf="@+id/introTextView"/>
 
     <Button
-        android:id="@+id/seeClientsButton"
+        android:id="@+id/clientsinfoButton"
         android:layout_width="match_parent"
         android:layout_height="105dp"
         android:layout_margin="16dp"
         android:layout_marginTop="136dp"
         android:background="#222222"
-        android:text="view clients"
+        android:text="@string/view_clients"
         android:textColor="#39FF14"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/historyButton"/>
+
+    <Button
+        android:id="@+id/dontPushButton"
+        android:layout_width="match_parent"
+        android:layout_height="105dp"
+        android:layout_margin="16dp"
+        android:layout_marginTop="136dp"
+        android:background="#222222"
+        android:text="@string/self_destruct"
+        android:textColor="#39FF14"
+        android:textSize="32sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/clientsinfoButton"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
