fixed pizza a bit and added burger place xml and actvity

--- a/app/src/main/res/layout/pizza_place.xml
+++ b/app/src/main/res/layout/pizza_place.xml
@@ -9,15 +9,15 @@
     >
 
     <TextView
-        android:id="@+id/titleLoginTextView"
-        android:layout_width="384dp"
-        android:layout_height="87dp"
-        android:layout_margin="16dp"
-        android:layout_marginTop="4dp"
-        android:gravity="center"
+        android:id="@+id/pizzaTime"
+        android:layout_width="230dp"
+        android:layout_height="64dp"
         android:text="@string/pizza_time"
-        android:textColor="#39FF14"
+        android:gravity="center"
         android:textSize="42sp"
+
+        android:textColor="#39FF14"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,13 +26,13 @@
         android:id="@+id/button"
         android:layout_width="275dp"
         android:layout_height="92dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="200dp"
         android:background="#D92929"
         android:text="@string/pepperoni_15"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleLoginTextView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button2"
@@ -62,15 +62,13 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
         android:text="@string/click_icon_to_add_to_cart"
         android:textColor="#39FF14"
         android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.531"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleLoginTextView"
-        app:layout_constraintVertical_bias="0.212" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
