--- a/app/src/main/res/layout/burger_place.xml
+++ b/app/src/main/res/layout/burger_place.xml
@@ -8,4 +8,29 @@
     android:background="#000000"
     >
 
+    <TextView
+        android:id="@+id/burgerHeader"
+        android:layout_width="279dp"
+        android:layout_height="87dp"
+        android:layout_marginTop="40dp"
+        android:gravity="center"
+        android:text="Burger Time!"
+        android:textColor="#39FF14"
+        android:textSize="42sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="@string/click_icon_to_add_to_cart"
+        android:textColor="#39FF14"
+        android:textSize="32sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/burgerHeader" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
