--- a/app/src/main/res/layout/burger_place.xml
+++ b/app/src/main/res/layout/burger_place.xml
@@ -14,7 +14,7 @@
         android:layout_height="87dp"
         android:layout_marginTop="40dp"
         android:gravity="center"
-        android:text="Burger Time!"
+        android:text="@string/burger_time"
         android:textColor="#39FF14"
         android:textSize="42sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,12 +25,37 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="12dp"
         android:text="@string/click_icon_to_add_to_cart"
         android:textColor="#39FF14"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/burgerHeader" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="275dp"
+        android:layout_height="92dp"
+        android:layout_marginTop="40dp"
+        android:background="#754B08"
+        android:text="Omega Burg: $13"
+        android:textSize="32sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="275dp"
+        android:layout_height="92dp"
+        android:layout_marginTop="40dp"
+        android:background="#FAC06C"
+        android:text="Fry Fries: $5"
+        android:textSize="32sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
