--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -12,14 +12,14 @@
         android:id="@+id/introTextView"
         android:layout_width="390dp"
         android:layout_height="200dp"
-        android:layout_marginTop="16dip"
+        android:layout_marginTop="10dip"
         android:padding="39dp"
         android:text="@string/welcome_admin_user_what_would_you_like_to_do"
         android:textColor="#39FF14"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/historyButton"
@@ -29,8 +29,9 @@
         android:layout_marginTop="136dp"
         android:background="#222222"
         android:text="@string/search_history"
-        android:textColor="#39FF14"
-        android:textSize="32sp"
+        android:textColor="#0C0D0C"
+        android:textSize="40sp"
+        android:backgroundTint="#39FF14"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,8 +45,9 @@
         android:layout_marginTop="136dp"
         android:background="#222222"
         android:text="@string/view_clients"
-        android:textColor="#39FF14"
-        android:textSize="32sp"
+        android:textColor="#0B0F0B"
+        android:textSize="40sp"
+        android:backgroundTint="#39FF14"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,8 +61,9 @@
         android:layout_marginTop="136dp"
         android:background="#222222"
         android:text="@string/self_destruct"
-        android:textColor="#39FF14"
-        android:textSize="32sp"
+        android:textColor="#030503"
+        android:textSize="40sp"
+        android:backgroundTint="#B60F03"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
