--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,7 +101,7 @@
         android:layout_width="390dp"
         android:layout_height="125dp"
         android:layout_marginTop="16dp"
-        android:text="Search"
+        android:text="Order"
         android:textSize="36sp"
         android:textColor="#39FF14"
         android:background="#222222"
