--- a/app/src/main/res/layout/order_page.xml
+++ b/app/src/main/res/layout/order_page.xml
@@ -13,7 +13,7 @@
         android:id="@+id/orderTitleTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Place Your Order"
+        android:text="Choose Your Food"
         android:textColor="#39FF14"
         android:textSize="36sp"
         android:gravity="center"
@@ -22,64 +22,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <RadioGroup
-        android:id="@+id/foodTypeRadioGroup"
+    <Button
+        android:id="@+id/buttonBurger"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="32dp"
+        android:layout_height="80dp"
+        android:text="Burger Place"
+        android:textColor="#39FF14"
+        android:background="#222222"
+        android:textSize="28sp"
+        android:layout_marginTop="48dp"
         app:layout_constraintTop_toBottomOf="@id/orderTitleTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp">
+        android:layout_marginEnd="32dp"/>
 
-        <RadioButton
-            android:id="@+id/radioBurger"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Burger Place"
-            android:textColor="#39FF14"
-            android:textSize="22sp"/>
-
-        <RadioButton
-            android:id="@+id/radioMexican"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Mexican Food"
-            android:textColor="#39FF14"
-            android:textSize="22sp"/>
-
-        <RadioButton
-            android:id="@+id/radioChinese"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chinese Food"
-            android:textColor="#39FF14"
-            android:textSize="22sp"/>
-
-        <RadioButton
-            android:id="@+id/radioPizza"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pizza"
-            android:textColor="#39FF14"
-            android:textSize="22sp"/>
-    </RadioGroup>
-
-    <EditText
-        android:id="@+id/quantityEditText"
+    <Button
+        android:id="@+id/buttonPizza"
         android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:hint="Enter Choice"
-        android:inputType="number"
+        android:layout_height="80dp"
+        android:text="Pizza"
         android:textColor="#39FF14"
-        android:textColorHint="#66FF66"
-        android:background="#6600FF00"
-        android:textSize="22sp"
-        android:gravity="center"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@id/foodTypeRadioGroup"
+        android:background="#222222"
+        android:textSize="28sp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/buttonBurger"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="32dp"
@@ -94,9 +61,10 @@
         android:background="#222222"
         android:textSize="28sp"
         android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@id/quantityEditText"
+        app:layout_constraintTop_toBottomOf="@id/buttonPizza"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
