made some changes

--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -31,7 +31,7 @@
         android:text="@string/search_history"
         android:textColor="#0C0D0C"
         android:textSize="40sp"
-        android:backgroundTint="#39FF14"
+        android:backgroundTint="#20B104"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
         android:text="@string/view_clients"
         android:textColor="#0B0F0B"
         android:textSize="40sp"
-        android:backgroundTint="#39FF14"
+        android:backgroundTint="#20B104"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
