--- a/app/src/main/res/layout/pizza_place.xml
+++ b/app/src/main/res/layout/pizza_place.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/pepperButton"
         android:layout_width="275dp"
         android:layout_height="92dp"
         android:layout_marginTop="200dp"
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/cheeseButton"
         android:layout_width="275dp"
         android:layout_height="92dp"
         android:layout_marginTop="48dp"
@@ -44,9 +44,10 @@
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/pepperButton" />
 
     <Button
+        android:id="@+id/meatloverButton"
         android:layout_width="275dp"
         android:layout_height="92dp"
         android:layout_marginTop="48dp"
@@ -55,7 +56,7 @@
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/cheeseButton"
         tools:ignore="TextContrastCheck" />
 
     <TextView
@@ -66,7 +67,7 @@
         android:text="@string/click_icon_to_add_to_cart"
         android:textColor="#39FF14"
         android:textSize="32sp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/pepperButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
