--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -2,22 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".LoginActivity">
+    tools:context=".AdminActivity">
 
     <TextView
         android:id="@+id/introTextView"
         android:layout_width="390dp"
-        android:layout_height="345dp"
-        android:layout_marginTop="10dip"
+        android:layout_height="200dp"
+        android:layout_marginTop="116dp"
         android:padding="39dp"
         android:text="@string/welcome_admin_user_what_would_you_like_to_do"
         android:textColor="#39FF14"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
